matchmaker can authenticate, tests pass

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <% if current_matchmaker %>
+      <%= "Welcome, #{current_matchmaker.username}"%>
+    <% end %>
     <%= yield %>
   </body>
 </html>
