adds logout functionality. creates method in test_helper for loging in a matchmaker

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   <body>
     <% if current_matchmaker %>
       <%= "Welcome, #{current_matchmaker.username}"%>
+      <%= link_to "Logout", logout_path, method: :delete %>
     <% end %>
     <%= yield %>
   </body>
