if matchmaker logs in with invalid user name, the matchmaker is notified that the user name is incorrect and is redirected to the login page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
     <% if current_matchmaker %>
       <%= "Welcome, #{current_matchmaker.username}"%>
       <%= link_to "Logout", logout_path, method: :delete %>
+    <% elsif flash[:notice] %>
+      <%= "#{flash[:notice]}"%>
+      
     <% end %>
     <%= yield %>
   </body>
