if user enters password that does not match, user is alerted that the problem is with the password and is redirected to login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
       <%= link_to "Logout", logout_path, method: :delete %>
     <% elsif flash[:notice] %>
       <%= "#{flash[:notice]}"%>
-      
+    <% elsif flash[:password_error] %>
+      <%= "#{flash[:password_error]}"%>
     <% end %>
     <%= yield %>
   </body>
