image is showing on welcome/index view

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,9 +11,12 @@
  * It is generally better to create a new file per style scope.
  *
 
- */
- @import "bootstrap-sprockets";
- @import "bootstrap";
+ /*
+ *
+ *= require style
+ *= require_self
+*/
+
 
 .bucket {
   width: 564px;
