--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,4 +1,24 @@
-.bush-baby {
- height: 200px;
- width: 200px;
+
+.welcome-image {
+  //   background-position: center;
+  //
+  // /* Background image doesn't tile */
+  // background-repeat: no-repeat;
+  //
+  // /* Background image is fixed in the viewport so that it doesn't move when
+  //    the content's height is greater than the image's height */
+  // background-attachment: fixed;
+  //
+  // /* This is what makes the background image rescale based
+  //    on the container's size */
+  // background-size: cover;
+  //
+  // /* Set a background color that will be displayed
+  //    while the background image is loading */
+  // background-color: #464646;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
 }
