--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,4 @@
 <%= stylesheet_link_tag "welcome" %>
-<div class="bush-baby">
-
-
-<%= image_tag("meet_my_friend_sofia.jpeg") %>
+<div class="row">
+  <%= image_tag("meet_my_friend_sofia.jpeg", :class => "welcome-image") %>
 </div>
