--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,29 @@
-<%= stylesheet_link_tag "welcome" %>
-<div class="row">
-  <%= image_tag("meet_my_friend_sofia.jpeg", :class => "welcome-image") %>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Meet My Friend Sofia</title>
+  <%= stylesheet_link_tag "application", :media => "all"%>
+
+</head>
+<body>
+  <section class="container">  <!-- begin navbar -->
+    <nav class="navbar" style="background-color: transparent;">
+      <a class="navbar-brand handwriting-font headline" href="#">Meet My Friend Sofia</a>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right ">
+          <li class="active white-font"><a href="#">SIGN UP / SIGN IN<span class="sr-only">(current)</span></a></li>
+          <li class="white-font"><a href="#">CONTACT</a></li>
+        </ul>
+      </div>
+    </nav>
+  </section>
+
+</body>
+</html>
+
+
+<!-- goal is to make it look like this:
+https://blackrockdigital.github.io/startbootstrap-agency/
+
+-->
