--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>MeetMyFriendSofia</title>
-    <%= favicon_link_tag 'favicon.ico' %>
-    <%= csrf_meta_tags %>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Meet My Friend Sofia</title>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  
-    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-  </head>
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <%= favicon_link_tag 'favicon.ico' %>
+  <%= csrf_meta_tags %>
 
-  <body>
-    <% if current_matchmaker %>
-      <%= "Welcome, #{current_matchmaker.username}"%>
-      <%= link_to "Logout", logout_path, method: :delete %>
-    <% elsif flash[:notice] %>
-      <%= "#{flash[:notice]}"%>
-    <% elsif flash[:password_error] %>
-      <%= "#{flash[:password_error]}"%>
-    <% end %>
-    <%= yield %>
-  </body>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+
+  <!-- Custom Fonts -->
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+
+
+</head>
+
+<body>
+  <% if current_matchmaker %>
+    <%= "Welcome, #{current_matchmaker.username}"%>
+    <%= link_to "Logout", logout_path, method: :delete %>
+  <% elsif flash[:notice] %>
+    <%= "#{flash[:notice]}"%>
+  <% elsif flash[:password_error] %>
+    <%= "#{flash[:password_error]}"%>
+  <% end %>
+
+  <%= yield %>
+</body>
 </html>
