added comment to welcome index view about pics needing to be 472 x 319 px

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -164,5 +164,6 @@
 
 <!-- goal is to make it look like this:
 https://blackrockdigital.github.io/startbootstrap-agency/
+pics need to be proportionate to 472 x 319 px
 
 -->
