had to comment out the links to the style sheets in application.html.erb b/c it was creating routing errors. New matchmakers can be created via the form in local host. test pass.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,9 +15,6 @@
  * require_tree .
  *= require style
  *= require welcome
+ *= require matchmakers
  *= require_self
 */
-
-body {
-  background-color: grey
-}
